# orca-backup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/orca_backup/: __init__.py  __main__.py  cli.py
src/orca_backup/config/: __init__.py
src/orca_backup/core/: __init__.py  backup.py  detector.py  restore.py  verify.py
src/orca_backup/models/: __init__.py  backup.py  slicer.py
src/orca_backup/utils/: __init__.py  compression.py  paths.py
tests/: __init__.py
